--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="main">
-        <h1><a href="http://localhost:3000/" title="R graph">R graph</a></h1>
+        <h1><a href="http://localhost:3000/">R-graph</a></h1>
         <div class="desc">
             <p>Wanna make some plots?</p>
             <p>Relax</p>
