Normal fix reload

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 <div class="header">
     <div class="logoWrapper">
         <a href="http://localhost:3000/">
-            <img src="./image/R_logo.png">
+            <img src="images/R_logo.png">
         </a>
     </div>
 </div>
